<resources>
    <string name="app_name">Epidemic</string>


    <!--注册登录相关-->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password_">忘记密码?</string>
    <string name="forget_password">忘记密码</string>
    <string name="enter_password">密码</string>
    <string name="enter_account">手机号码</string>
    <string name="err_account_or_password">账号或密码错误</string>
    <string name="please_login">该手机号已注册，请前往登录</string>
    <string name="loading_login">注册成功,即将进入登录界面</string>
    <string name="password_length">密码的长度为8-18位</string>
    <string name="comfirm_password">请确认密码</string>
    <string name="enter_correct_phone">请输入正确的手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="send_message">发送消息</string>
    <string name="follow">关注用户</string>
    <string name="user_friend_info">关注 %1$d | 粉丝 %2$d</string>

    <!--系统反馈相关-->
    <string name="select_feedback">反馈选择:</string>
    <string name="app">app</string>
    <string name="applet">小程序</string>
    <string name="web">官网</string>
    <string name="satisfaction">满意程度</string>
    <string name="summit">提交</string>
    <string name="enter_evaluate">请输入评价</string>
    <string name="feedback_content">反馈内容:</string>
    <string name="count_second">%1$ds</string>
    <string name="please_register">该手机号未注册，请前往注册</string>
    <string name="sucess_update_password">密码修改成功</string>
    <string name="feedback">系统反馈</string>
    <string name="hint_count">0/140</string>
    <string name="publish">发布</string>
    <string name="hint_feed">请输入你想说的.</string>
    <string name="current_position">当前位置：%1$s-%2$s</string>
    <string name="hint_current_position">当前位置：</string>
    <string name="feed_count">%1$d/140</string>
    <string name="publishing_news">发表动态</string>
    <string name="send_dynamic_sucess">发布动态成功</string>
    <string name="send_dynamic_fail">发布动态失败</string>
    <string name="user_detail">用户详情</string>
    <string name="home_message">家庭信息</string>
    <string name="determine">确定</string>
    <string name="add_message">添加信息</string>
    <string name="apply_for_donation">筹款申请</string>
    <string name="send">发送</string>
    <string name="hint_comment">请输入评论</string>

    <!--动态权限处理相关-->
    <string name="permission_hint">我们需要获取权限，请同意，否则无法使用！</string>
    <string name="allow">授权</string>
    <string name="deny">拒绝</string>
    <string name="reply_comment">\@%1$s: %2$s</string>
    <string name="reply_hint">回复%1$s: </string>
    <string name="copy_success">拷贝成功!</string>

    <!--话题-->
    <string name="join_count">%1$d人参与</string>
    <!--好友-->
    <string name="hint_search_user">昵称，拼音，首字母</string>
    <string name="search">搜索</string>

    <!--我的资料-->
    <string name="edit">编辑</string>
    <string name="my_profile">我的资料</string>
    <string name="save">保存</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="area">地区</string>
    <string name="description">个人介绍</string>
    <string name="hint_description">请向大家介绍下自己吧！</string>
    <string name="phone">手机号</string>
    <string name="area_value2">%1$s-%2$s-%3$s</string>
    <string name="select_gender">请选择性别</string>

    <!--二维码-->
    <string name="hint_scan_my_code">保存到本地</string>
    <string name="hint_scan_code">将二维码放入框内即可扫描</string>
    <string name="error_not_support_qrcode_format">不支持该格式!</string>
    <string name="my_code">我的二维码</string>

    <!--聊天-->
    <string name="error_message_register">注册聊天服务器失败，请稍后再试！</string>
    <string name="error_message_login">登录聊天服务器失败，请稍后再试！</string>
    <string name="hint_enter_message">请输入你要发送消息.</string>
    <string name="error_send_message">发送失败，请稍后再试！</string>
    <string name="share">分享</string>
    <string name="report">举报</string>
    <string name="error_share_failed">分享失败,请稍候再试!</string>
    <string name="hint_logout">您的帐号在另一地点登录，您已被迫下线！</string>
    <string name="confirm">确认</string>
    <string name="child_dynamic">\@%1$s:%2$s</string>

    <!--网络相关-->
    <string name="error_network_unknown_host">找不到服务器,请稍后再试!</string>
    <string name="error_network_connect">连接失败,请稍后再试!</string>
    <string name="error_network_timeout">连接超时,请稍后再试!</string>
    <string name="error_network_not_auth">登录信息过期,请重新登录!</string>
    <string name="error_network_not_permission">你没有权限访问!</string>
    <string name="error_network_not_found">你访问的内容不存在!</string>
    <string name="error_network_server">服务器错误,请稍后再试!</string>
    <string name="error_network_unknown">未知错误,请稍后再试!</string>
    <string name="loading">拼命加载中.</string>
    <string name="error_response_sign">接口签名错误，请稍后再试！</string>
    <string name="error_response_decrypt">接口解密错误，请稍后再试！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
