<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <!--Toolbar-->
    <include layout="@layout/tool_bar" />

    <!--内容部分layout_behavior:用来控制内容区域-->
    <LinearLayout
        style="@style/ToolbarContent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satisfaction"/>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon1"
                style="@style/Icon"
                android:src="@mipmap/icon_face6"/>

            <View
                style="@style/MyView"/>

            <ImageView
                android:id="@+id/icon2"
                style="@style/Icon"
                android:src="@mipmap/icon_face7"/>

            <View
                style="@style/MyView"/>

            <ImageView
                android:id="@+id/icon3"
                style="@style/Icon"
                android:src="@mipmap/icon_face8"/>

            <View
                style="@style/MyView"/>

            <ImageView
                android:id="@+id/icon4"
                style="@style/Icon"
                android:src="@mipmap/icon_face9"/>

            <View
                style="@style/MyView"/>

            <ImageView
                android:id="@+id/icon5"
                style="@style/Icon"
                android:src="@mipmap/icon_face10"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_content"/>

        <!--反馈内容-->
        <EditText
            android:layout_marginTop="@dimen/margin_large"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/enter_evaluate"
            android:id="@+id/content"
            android:textSize="@dimen/default_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"/>

        <!--提交按钮-->
        <Button
            android:id="@+id/summit"
            android:textSize="20sp"
            android:background="@drawable/selector_color_primary"
            android:textColor="@drawable/selector_text_color_primary_reverse"
            style="@style/Button"
            android:text="@string/summit"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
