<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient_login"
    android:orientation="vertical">

    <View style="@style/MyView" />

    <RelativeLayout
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_radius_background_white"
            android:orientation="vertical"
            android:padding="30dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <EditText
                android:layout_marginTop="50dp"
                android:id="@+id/r_account"
                style="@style/EditText"
                android:layout_height="60dp"
                android:textSize="15sp"
                android:background="@drawable/shape_border_up"
                android:gravity="center"
                android:hint="@string/enter_account"
                android:inputType="phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <!--验证码输入-->
                <EditText
                    android:id="@+id/r_et_verification_Code"
                    style="@style/EditText2"
                    android:layout_height="match_parent"
                    android:height="60dp"
                    android:textSize="15sp"
                    android:background="@drawable/shape_border_up"
                    android:gravity="center"
                    android:hint="@string/enter_verification_code"
                    android:inputType="phone" />

                <!--发送验证码按钮-->
                <Button
                    android:id="@+id/r_btn_send_code"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/button_width_large"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/transparent"
                    android:text="@string/send_code"
                    android:textColor="@drawable/selector_button_color_primary_light_grey" />
            </LinearLayout>

            <!--密码-->
            <EditText
                android:id="@+id/r_password1"
                style="@style/EditText"
                android:layout_height="60dp"
                android:textSize="15sp"
                android:hint="设置6-18位密码"
                android:gravity="center"
                android:background="@drawable/shape_border_up"
                android:inputType="textPassword" />

            <!--确认密码-->
            <EditText
                android:id="@+id/r_password2"
                style="@style/EditText"
                android:hint="请确认密码"
                android:gravity="center"
                android:layout_height="60dp"
                android:textSize="15sp"
                android:background="@drawable/shape_border_up"
                android:inputType="textPassword" />

            <!--注册-->
            <Button
                android:id="@+id/r_login"
                style="@style/Button"
                android:layout_height="60dp"
                android:background="@drawable/shape_border_blue"
                android:text="@string/register"
                android:textColor="@color/shadow_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/logo_login"
                android:stateListAnimator="@null" />

        </LinearLayout>

    </RelativeLayout>

    <View
        style="@style/MyView"
        android:layout_weight="2" />

</LinearLayout>